# chatbees-python-client

./: .gitignore  LICENSE  README.md  chatbees.ts  pyproject.toml  pytest.ini
chatbees/: __init__.py
chatbees/client/: admin_management.py  application_management.py  collection_management.py
chatbees/client_models/: chat.py  collection.py  doc.py
chatbees/server_models/: application.py  application_api.py  chat.py  collection_api.py  conversation.py  crawl_type.py  doc_api.py  feedback_api.py  ingestion_api.py  ingestion_type.py  search_api.py
chatbees/tests/: api_surface_test.py  localfs_impl_test.py  regression_test.py  smoke_test.py
chatbees/tests/data/: española.txt  française.txt
chatbees/utils/: ask.py  config.py
client/: collection_config.py  nautilusdb.py
client_models/: collection.py  collection_builder.py  collection_config.py  vector.py
models/: api.py
nautilusdb/: __init__.py
nautilusdb/client/: admin_management.py  collection_management.py  project_management.py
nautilusdb/client_models/: app.py  chat.py  collection.py  collection_builder.py  column_type.py  doc.py  ecosystem.py  query.py  search.py  vector.py
nautilusdb/server_models/: admin_api.py  api.py  app_api.py  collection_api.py  doc_api.py  index.py  project_api.py  query_api.py  search_api.py  vector_api.py
nautilusdb/tests/: api_surface_test.py  e2e.py  smoke_test.py
nautilusdb/tests/data/: text_file.txt  中文.txt
nautilusdb/utils/: ask.py  config.py  exceptions.py  file_upload.py
server_models/: api.py  index.py
utils/: config.py  exceptions.py
