[tool.poetry]
name = "chatbees-python-client"
packages = [
    { include="chatbees", from="." },
]
version = "1.2.6"
description = "Python client for ChatBees"
authors = ["ChatBees <build@chatbees.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
requests = "^2.31.0"
croniter = "^2.0.5"
shortuuid = "^1.0.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
requests-mock =	"^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
